<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.fragments.test.TestFragment">

    <ImageView
        android:id="@+id/img_part_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        android:contentDescription="@string/part_1"
        android:src="@drawable/part_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_part_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginEnd="@dimen/space_10"
        android:contentDescription="@string/part_2"
        android:src="@drawable/part_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_part_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        android:contentDescription="@string/part_3"
        android:src="@drawable/part_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_part_1" />

    <ImageView
        android:id="@+id/img_part_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginEnd="@dimen/space_10"
        android:contentDescription="@string/part_4"
        android:src="@drawable/part_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_part_2" />

    <ImageView
        android:id="@+id/img_part_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        android:contentDescription="@string/part_5"
        android:src="@drawable/part_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_part_3" />

    <ImageView
        android:id="@+id/img_part_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginEnd="@dimen/space_10"
        android:contentDescription="@string/part_6"
        android:src="@drawable/part_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_part_4" />

    <ImageView
        android:id="@+id/img_part_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        android:contentDescription="@string/part_7"
        android:src="@drawable/part_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_part_5" />

    <ImageView
        android:id="@+id/img_full_7_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginEnd="@dimen/space_10"
        android:contentDescription="@string/full_7_part"
        android:src="@drawable/full_7_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_part_6" />

</androidx.constraintlayout.widget.ConstraintLayout>