<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18"
        android:layout_marginEnd="@dimen/space_16"
        android:drawableStart="@drawable/test_24"
        android:drawablePadding="@dimen/space_20"
        android:gravity="center_vertical"
        android:text="@string/test_toeic"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_19" />

    <TextView
        android:id="@+id/textVocabulary"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18"
        android:layout_marginEnd="@dimen/space_16"
        android:drawableStart="@drawable/word_24"
        android:drawablePadding="@dimen/space_20"
        android:gravity="center_vertical"
        android:text="@string/title_vocabulary" />

    <TextView
        android:id="@+id/textReminder"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:drawableStart="@drawable/ic_settings_black_24dp"
        android:drawablePadding="@dimen/space_20"
        android:text="@string/title_remind" />
</LinearLayout>
